--- a/_posts/2016-5-24-second.md
+++ b/_posts/2016-5-24-second.md
@@ -1,11 +1,9 @@
 ---
 layout: default
-title: my first post
+title: md post
 ---
 # {{ page.title }} #
 <p>This is my second post.Click the link below to go back to index:</p>
 <a href="{{ site.baseurl }}/index.html">Go back</a>
 
-[go back2](http://{{ site.baseurl }}/index.html)
-
-[go baidu](http://www.baidu.com)
+[http://{{ site.baseurl }}/index.html](http://{{ site.baseurl }}/index.html)
