--- a/draft/深度理解同步、异步、阻塞、非阻塞.md
+++ b/draft/深度理解同步、异步、阻塞、非阻塞.md
@@ -10,19 +10,27 @@
 - 中断查询
 - 事件循环
 
-同步：
-- 指令之间关联的，依赖的。https://stackoverflow.com/a/748235/6638065
-- 当您同步执行某些操作时，等待它完成后再继续执行其他任务。当您异步执行某些操作时，可以在完成之前继续执行另一个任务。操作系统可以管理多个线程，并在切换到另一个线程之前为线程分配处理器时间的一部分（“切片”），以便轮流做一些工作。https://stackoverflow.com/a/748189/6638065
-- 排队买票、餐厅 https://stackoverflow.com/a/26804844/6638065
-
+I/O 的同步/异步
 > In computer science, asynchronous I/O (also non-sequential I/O) is a form of input/output processing that permits other processing to continue before the transmission has finished.
 > 
 > 在计算机科学中，异步I/O（也是非顺序I/O）是一种输入/输出处理形式，允许其他处理在它传输完成之前继续。
 
+
+线程的阻塞
 > In computer science, an algorithm is called non-blocking if failure or suspension of any thread cannot cause failure or suspension of another thread
-> 
+>
 > 在计算机科学中，如果任何线程的失败或暂停不会导致另一个线程的失败或暂停，则称这个算法为非阻塞的
 
+Nodejs
+
+> Blocking is when the execution of additional JavaScript in the Node.js process must wait until a non-JavaScript operation completes. This happens because the event loop is unable to continue running JavaScript while a blocking operation is occurring.
+> 
+> 阻塞是指在Node.js进程中执行其他JavaScript必须等到非JavaScript操作完成的时间。 发生这种情况是因为事件循环在阻塞操作发生时无法继续运行JavaScript。
+同步：
+- 指令之间关联的，依赖的。https://stackoverflow.com/a/748235/6638065
+- 当您同步执行某些操作时，等待它完成后再继续执行其他任务。当您异步执行某些操作时，可以在完成之前继续执行另一个任务。操作系统可以管理多个线程，并在切换到另一个线程之前为线程分配处理器时间的一部分（“切片”），以便轮流做一些工作。https://stackoverflow.com/a/748189/6638065
+- 排队买票、餐厅 https://stackoverflow.com/a/26804844/6638065
+- 
 同步执行是指代码按照**顺序**执行；
 异步执行是指代码不按照代码出现的先后**顺序**执行。
 
@@ -43,5 +51,8 @@ https://www.zhihu.com/question/19732473/answer/20851256
 从分布式系统角度的回答。
 同步和异步关注的是消息通信机制 (synchronous communication/ asynchronous communication)所谓同步，就是在发出一个*调用*时，在没有得到结果之前，该*调用*就不返回。但是一旦调用返回，就得到返回值了。换句话说，就是由*调用者*主动等待这个*调用*的结果。而异步则是相反，*调用*在发出之后，这个调用就直接返回了，所以没有返回结果。换句话说，当一个异步过程调用发出后，调用者不会立刻得到结果。而是在*调用*发出后，*被调用者*通过状态、通知来通知调用者，或通过回调函数处理这个调用。
 
-阻塞和非阻塞，应该描述的是一种状态，同步与非同步描述的是行为方式
 
+
+- 同步、异步与线程无关
+- 多线程降低阻塞带来的CPU空闲时间
+- I/O 有多种模型，不是所有 I/O 都是阻塞的
