--- a/draft/深度理解同步、异步、阻塞、非阻塞.md
+++ b/draft/深度理解同步、异步、阻塞、非阻塞.md
@@ -10,11 +10,76 @@
 - 中断查询
 - 事件循环
 
-I/O 的同步/异步
+## 同步、异步
+
+Wiki：异步 I/O
 > In computer science, asynchronous I/O (also non-sequential I/O) is a form of input/output processing that permits other processing to continue before the transmission has finished.
 > 
-> 在计算机科学中，异步I/O（也是非顺序I/O）是一种输入/输出处理形式，允许其他处理在它传输完成之前继续。
+> 在计算机科学中，异步I/O（也叫非顺序I/O）是一种输入/输出处理形式，允许其他处理在它传输完成之前继续。
 
+这个定义同样可以适用到所有的同步、异步。
+整理一下信息我们可以得出：
+- 同步或者异步是一种**处理形式**。
+- 同步是顺序的；异步是非顺序的。
+- 同步操作在处理完成之前不允许进行其他操作；异步操作在传输完成之前允许进行其他操作。
+
+### 同步或者异步是一种**处理形式**
+
+
+同步或者异步是用来描述两个任务（操作）的，是相对的概念。我们常说的一个任务是同步的或者异步的，是相对于另一个任务的。同步或异步描述的如何处理两个任务的执行顺序，所以说是一种**处理形式**。
+
+### 同步是顺序的；异步是非顺序的
+
+任务 B 的执行需要任务 A 执行的结果，j任务 C 的执行需要任务 B 执行的结果。因此任务 B 只能等待任务 A 执行完毕才能执行，任务 C 只有在任务 B 执行完毕之后才能执行，所以最终的顺序只能是 A -> B -> C。也可以说，同步执行的任务是有**关联**、有**依赖**的，相反，异步执行的任务互相独立。
+
+### 同步的操作在处理完成之前不允许进行其他操作；异步操作在传输完成之前允许进行其他操作
+
+同步操作的其他操作（也可以说是进一步操作）指的就是同步的其他任务。同步的任务由于存在依赖关系，所以在被依赖的任务完成之前是没有办法进行其他任务的；而异步的任务由于没有依赖关系，所以完全可以*并发*执行，两个完全不相干的任务没有必要去等彼此。
+
+用图来表示：
+
+同步的任务 A、B、C：
+```
+thread A -> |<---A---->|   
+                        \  
+thread B ------------>   ->|<----B---------->|   
+                                              \   
+thread C ---------------------------------->   ->|<------C----->| 
+```
+A、B、C 分别在不同的线程上，但是由于其同步的关系，所以 B、C 在一开始并不会运行，而是按照 A -> B -> C 的顺序执行的。
+
+异步的任务 A、B、C：
+```
+thread A ->     |<---A---->|
+thread B ----->     |<----B---------->| 
+thread C --------->     |<------C--------->|
+```
+
+异步的任务 A、B、C 是完全是由自己决定运行的。
+
+图示来源：[stackoverflow
+](https://stackoverflow.com/a/748235/6638065)
+
+`<`，`>`代表任务的开始与结束；`|`代表*CPU时间片*。
+
+关于同步与异步的生动的比喻：
+
+同步：你在排队买电影票，只有你前面的所有人都买到电影票你才能买，你和其他人是同步的。
+异步：你在餐馆点餐。你点你的餐，其他人也在点他们的餐
+
+
+
+
+
+## Q&A
+
+Q：
+A：
+
+参考：
+- [Wikipedia: Asynchronous_I/O](https://en.wikipedia.org/wiki/Asynchronous_I/O)
+- [StackOverflow: Asynchronous vs synchronous execution, what does it really mean?
+](https://stackoverflow.com/questions/748175/asynchronous-vs-synchronous-execution-what-does-it-really-mean)
 
 线程的阻塞
 > In computer science, an algorithm is called non-blocking if failure or suspension of any thread cannot cause failure or suspension of another thread
