--- a/source/_drafts/构建组件库.md
+++ b/source/_drafts/构建组件库.md
@@ -1,5 +1,46 @@
 # 构建组件库
 
+目录结构
+
+```
+.
+├── .babelrc
+├── .browserslistrc
+├── .editorconfig
+├── .eslintignore
+├── .eslintrc.js
+├── .gitignore
+├── README.md
+├── build
+│   ├── webpack.base.config.js
+│   ├── webpack.prod.config.js
+│   ├── webpack.prod.dev.config.js
+│   └── webpack.test.config.js
+├── commitlint.config.js
+├── docs
+│   ├── .vuepress
+│   │   ├── components
+│   │   ├── config.js
+│   │   ├── dist
+│   │   └── enhanceApp.js
+│   ├── README.md
+│   └── components
+│       └── README.md
+├── package.json
+├── postcss.config.js
+├── src
+│   ├── components
+│   └── index.js
+├── test
+│   ├── .eslintrc.js
+│   └── unit
+│       ├── index.js
+│       ├── karma.conf.js
+│       ├── specs
+│       └── util.js
+└── yarn.lock
+```
+
 使用到的 `loader`
 
 - [css-loader](https://github.com/webpack-contrib/css-loader)：将 `@import` 和 `url()` 按照`import/require()`的方式解析
@@ -379,6 +420,76 @@ module.exports = merge(webpackBaseConfig, config)
 ```
 
 单元测试不需要入口出口，只是增加了一个 `friendly-errors-webpack-plugin` 的插件，使控制台的输出更加友好。
+
+## 单元测试
+
+使用 `karma` + `mocha` + `chai`
+
+`karma` 配置：karma.conf.js
+
+```JavaScript
+const webpackConfig = require('../../build/webpack.test.config')
+
+// Karma configuration
+// Generated on Fri Jan 18 2019 17:21:29 GMT+0800 (GMT+08:00)
+
+module.exports = function(config) {
+  config.set({
+
+    // base path that will be used to resolve all patterns (eg. files, exclude)
+    basePath: '',
+
+    // frameworks to use
+    // available frameworks: https://npmjs.org/browse/keyword/karma-adapter
+    frameworks: ['mocha', 'chai'],
+
+    // list of files / patterns to load in the browser
+    files: ['./index.js'],
+
+    // list of files / patterns to exclude
+    exclude: [],
+
+    // preprocess matching files before serving them to the browser
+    // available preprocessors: https://npmjs.org/browse/keyword/karma-preprocessor
+    preprocessors: {
+      './index.js': ['webpack']
+    },
+
+    webpack: webpackConfig,
+
+    // test results reporter to use
+    // possible values: 'dots', 'progress'
+    // available reporters: https://npmjs.org/browse/keyword/karma-reporter
+    reporters: ['spec'],
+
+    // web server port
+    port: 9876,
+
+    // enable / disable colors in the output (reporters and logs)
+    colors: true,
+
+    // level of logging
+    // possible values: config.LOG_DISABLE || config.LOG_ERROR || config.LOG_WARN || config.LOG_INFO || config.LOG_DEBUG
+    logLevel: config.LOG_INFO,
+
+    // enable / disable watching file and executing tests whenever any file changes
+    autoWatch: true,
+
+    // start these browsers
+    // available browser launchers: https://npmjs.org/browse/keyword/karma-launcher
+    browsers: ['Chrome'],
+
+    // Continuous Integration mode
+    // if true, Karma captures browsers, runs the tests and exits
+    singleRun: false,
+
+    // Concurrency level
+    // how many browser should be started simultaneous
+    concurrency: Infinity
+  })
+}
+
+```
 
 参考：
 
