--- a/docs/notes/创建对象的三种方式.md
+++ b/docs/notes/创建对象的三种方式.md
@@ -1,3 +1,13 @@
+---
+title: JavaScript 创建对象的三种方式
+date: 2019-03-14
+tags:
+- JavaScript
+- 创建对象
+---
+
+# JavaScript 创建对象的三种方式
+
 ## 构造函数
 
 ```JavaScript
