--- a/docs/views/前端/同源策略.md
+++ b/docs/views/前端/同源策略.md
@@ -5,6 +5,8 @@ tags:
 - 同源策略
 - 跨域请求
 - 跨窗口通信
+categories: 
+ - 前端
 ---
 不能直接跨窗口通信的原因就是同源策略。之所以单独提出跨窗口通信，是因为这是一个比较典型的问题。 其实网上关于同源策略(same-origin policy)的文章已经很多了，但是或者不够全面，或者条理不够清晰，导致阅读起来比较麻烦。我在这里做一个比较全面、条理清晰的总结。
 
