--- a/docs/views/前端/宽度高度.md
+++ b/docs/views/前端/宽度高度.md
@@ -3,6 +3,8 @@ title: js 各种宽度高度总结
 date: 2018-04-29 13:52:24
 tags:
 - JavaScript
+categories: 
+ - 前端
 ---
 js中有很多与高度宽度相关的属性，这篇文章旨在对这些属性做一个全面易懂的总结。
 
