--- a/docs/views/操作系统/深度理解同步、异步、阻塞、非阻塞.md
+++ b/docs/views/操作系统/深度理解同步、异步、阻塞、非阻塞.md
@@ -2,12 +2,9 @@
 title: 深度理解同步、异步、阻塞、非阻塞
 date: 2018-12-12 14:15:20
 tags:
-- 同步
-- 异步
-- 阻塞
-- 非阻塞
+- 操作系统
 categories: 
- - 前端
+ - 操作系统
 ---
 ## 同步 vs 异步
 
