去除图片路径后的参数

--- a/docs/views/前端/从输入网址到网页显示出来发生了什么.md
+++ b/docs/views/前端/从输入网址到网页显示出来发生了什么.md
@@ -237,7 +237,7 @@ HTML Parser将HTML标记解析为DOM Tree。
 
 最后DOM Tree就会是如下形式：
 
-![DOM](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/images/dom-tree.png?hl=zh-cn)
+![DOM](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/images/dom-tree.png)
 （示例与图片来源于[Google Developers](https://developers.google.com/)）
 
 ### 2. 构建CSSOM Tree
@@ -256,7 +256,7 @@ img { float: right }
 
 会形成如下所示CSSOM Tree：
 
-![CSSOM Tree](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/images/cssom-tree.png?hl=zh-cn)
+![CSSOM Tree](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/images/cssom-tree.png)
 （示例与图片来源于[Google Developers](https://developers.google.com/)）
 
 这里的CSSOM Tree并不完全，实际的CSSOM Tree中还应该包含浏览器的默认样式。
@@ -271,7 +271,7 @@ img { float: right }
 
 合并之后的Render Tree：
 
-![Render Tree](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/images/render-tree-construction.png?hl=zh-cn)
+![Render Tree](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/images/render-tree-construction.png)
 （图片来源于[Google Developers](https://developers.google.com/)）
 
 ### 4. Layout布局
