--- a/docs/views/前端/防抖、节流.md
+++ b/docs/views/前端/防抖、节流.md
@@ -32,7 +32,7 @@ n秒内执行多次同一函数只有第一次有效。
 
 如果快速记忆呢？很简单：
 
-- 防抖可以保证不管你点的频率是否稳定，只要你足够快，函数执行的频率就是稳定的，不会出现“抖动”，因此叫做“防抖”
-- 节流降低了频率，因此“节省了流量，所以叫做“节流”
+- 防抖可以保证你最后一次的执行是稳定的，不会出现“抖动”，因此叫做“防抖”。但是防抖不关心“流量”（函数执行的频率），即一直没有“流量”也没有关系，只要最后有一次成功即可。
+- 节流限制了频率，但不会出现一直不执行的情况，所以叫做“节流”，也就是说还是会有“流量”。
 
-因此应用起来的区别也很明显了：一般来讲，如果你想要执行的频率稳定，就用防抖；如果想要执行的频率不要太高，就用节流。
+因此应用起来的区别也很明显了：两者都可以降低频率，如果你想要保证最后一次必须执行，就用防抖；如果想要保证第一次必须执行，就用节流。
