--- a/docs/views/前端/前端资源预加载.md
+++ b/docs/views/前端/前端资源预加载.md
@@ -128,13 +128,10 @@ GitHub 使用 `dns-prefetch` 对非 `github.com` 的域名进行预先 DNS：
 
 如何选择：
 
-- 需要预渲染：`prerender`
-- 不需要预渲染：
-  - 已知资源 URL：
-    - 当前页面加载完后要使用该资源：`preload`
-    - 下个页面使用该资源：`prefetch`
-  - 只知道域名：
-    - 当前页面会用到的跨域域名：`dns-prefetch`、`preconnect`
+- 当前页面会用到的跨域域名且不知道具体 URL：`dns-prefetch`、`preconnect`
+- 下个页面用到的资源：`prefetch`
+- 当前页面加载完就会用到的资源：`preload`
+- 用户很可能会访问到的下个页面：`prerender`
 
 一些区别：
 
