--- a/docs/views/前端/前端资源预加载.md
+++ b/docs/views/前端/前端资源预加载.md
@@ -122,7 +122,107 @@ GitHub 使用 `dns-prefetch` 对非 `github.com` 的域名进行预先 DNS：
 
 接下来用于很可能会访问的页面。
 
+## 使用示例
 
+写了个小 demo：https://github.com/LasyIsLazy/preload-demo
+
+未使用预加载时
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+
+    <!-- 预加载 -->
+    <!-- <link rel="preload" href="./a.js" as="script" /> -->
+    <!-- <link rel="prefetch" href="./sub.js" as="script" /> -->
+    <!-- <link rel="prerender" href="./sub.html" /> -->
+
+    <link rel="stylesheet" href="./1.css" />
+  </head>
+  <body>
+    index
+    <a href="./sub.html">sub</a>
+    <script src="./a.js"></script>
+  </body>
+</html>
+
+```
+
+[![ajNsDs.png](https://s1.ax1x.com/2020/08/12/ajNsDs.png)](https://imgchr.com/i/ajNsDs)
+
+页面加载 `index.html` 之后，由上而下按照解析的顺序请求了 `1.css` 和 `a.js`。
+
+接下来使用 `preload` 对当前页面要使用的 `a.js` 进行预加载
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+
+    <!-- 预加载 -->
+    <link rel="preload" href="./a.js" as="script" />
+    <!-- <link rel="prefetch" href="./sub.js" as="script" /> -->
+    <!-- <link rel="prerender" href="./sub.html" /> -->
+
+    <link rel="stylesheet" href="./1.css" />
+  </head>
+  <body>
+    index
+    <a href="./sub.html">sub</a>
+    <script src="./a.js"></script>
+  </body>
+</html>
+
+```
+
+![ajUPat.png](https://s1.ax1x.com/2020/08/12/ajUPat.png)
+
+可见，`a.js` 在 `index.html` 解析之后立即开始了加载。
+
+然后撤销 `preload`，使用 `prefetch` 对子页面 `sub.html` 会用到的 `sub.js` 进行预加载。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+
+    <!-- 预加载 -->
+    <!-- <link rel="preload" href="./a.js" as="script" /> -->
+    <link rel="prefetch" href="./sub.js" as="script" />
+    <!-- <link rel="prerender" href="./sub.html" /> -->
+
+    <link rel="stylesheet" href="./1.css" />
+  </head>
+  <body>
+    index
+    <a href="./sub.html">sub</a>
+    <script src="./a.js"></script>
+  </body>
+</html>
+
+```
+
+![ajUfot.png](https://s1.ax1x.com/2020/08/12/ajUfot.png)
+
+上图为 `index.html` 的网络请求，可以看到浏览器对 `sub.js` 发起了请求，而主页并没有该资源，因此这里是进行的预加载。
+
+![ajaPOJ.png](https://s1.ax1x.com/2020/08/12/ajaPOJ.png)
+
+上图为 `sub.html` 的网络请求，可以看到浏览器对 `sub.js` 的请求是直接从缓存中取的（prefetch cache）。
+
+以上代码我放到了 GitHub 仓库里：https://github.com/LasyIsLazy/preload-demo
+
+代码里也尝试了 `prerender` ，但是好像并没有起作用，加上兼容性还有很大问题，所以我也没做过多尝试。
 
 ## 总结
 
