修复图片链接错误

--- a/docs/views/前端/前端资源预加载.md
+++ b/docs/views/前端/前端资源预加载.md
@@ -152,7 +152,7 @@ GitHub 使用 `dns-prefetch` 对非 `github.com` 的域名进行预先 DNS：
 
 ```
 
-[![ajNsDs.png](https://s1.ax1x.com/2020/08/12/ajNsDs.png)](https://imgchr.com/i/ajNsDs)
+![aj0MXF.png](https://s1.ax1x.com/2020/08/12/aj0MXF.png)
 
 页面加载 `index.html` 之后，由上而下按照解析的顺序请求了 `1.css` 和 `a.js`。
 
